--- a/src/style.scss
+++ b/src/style.scss
@@ -1,17 +1,82 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body, html {
-  font-family: "Roboto", sans-serif;
-  background: linear-gradient(to bottom, #fff 0%,#53cbf1 40%,#05abe0 100%);
+  font-family: 'Martel Sans', sans-serif;
+  background: linear-gradient(to bottom, #f00 0%,#ff6262 40%,#444 100%);
   height: 100%;
 }
 
-.logo {
-  background-image: url('img/illuminati.jpg');
-  width: 100px;
-  height: 100px;
-  background-repeat: no-repeat;
-  background-size: contain;
+ul {
+  list-style: none;
+}
+
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+
+  img {
+    height: 40px;
+    margin: 10px;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    li {
+      height: inherit;
+      margin-right: 20px;
+    }
+  }
+
+}
+
+.form-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  * {
+    border-radius: 5px;
+    padding: 5px;
+  }
+  .title-input {
+    height: 30px;
+    width: 50vw;
+    margin: 10px;
+  }
+  .cover-url-input {
+    height: 30px;
+    width: 80vw;
+    margin-bottom: 10px;
+  }
+  .tags-input {
+    height: 30px;
+    width: 80vw;
+    margin-bottom: 10px;
+  }
+  .content-input {
+    height: 50vh;
+    min-height: 160px;
+    width: 80vw;
+    margin-bottom: 10px;
+  }
+  .submit-button:hover {
+    cursor: pointer;
+    background-color: #bbb;
+  }
 }
 
 .active {
-  color: pink;
+  color: red;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
