--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,9 @@
 
 body, html {
   font-family: 'Martel Sans', sans-serif;
+  font-size: 16px;
   background: linear-gradient(to bottom, #f00 0%,#ff6262 40%,#444 100%);
+  background-attachment: fixed;
   height: 100%;
 }
 
@@ -32,6 +34,44 @@ nav {
     li {
       height: inherit;
       margin-right: 20px;
+    }
+  }
+
+}
+
+.posts-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  a:first-child {
+    margin-top: 20px;
+  }
+  a {
+    margin-bottom: 20px;
+  }
+}
+
+.tile-container {
+  display: flex;
+  flex-direction: row;
+  background-color: #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  width: 80vw;
+  min-width: 300px;
+
+  .cover-photo{
+    height: 150px;
+    width: 150px;
+    border-radius: 5px;
+  }
+
+  .text-container{
+    flex-grow: 1;
+    padding: 10px;
+    .tile-title{
+      font-size: 1.7em;
+      line-height: 1em;
     }
   }
 
