--- a/src/style.scss
+++ b/src/style.scss
@@ -77,6 +77,47 @@ nav {
 
 }
 
+.post-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 5px;
+  width: 80vw;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  .post-title-card {
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: solid thin #aaa;
+
+    img {
+      margin: 10px;
+      border-radius: 5px;
+    }
+    .title-card-with-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: space-between;
+      margin: 10px;
+      .button-container > button {
+        padding: 5px;
+      }
+      .title-with-tags {
+        text-align: right;
+        h1 {
+          font-size: 2.5em;
+        }
+      }
+    }
+  }
+}
+
 .form-container{
   display: flex;
   flex-direction: column;
